# bazel-test

./: BUILD.bazel  WORKSPACE  package-lock.json  package.json
.ijwb/: .bazelproject
apps/vite-project/: BUILD.bazel  package-lock.json  package.json
apps/vite-project-2/: BUILD.bazel  index.html  package.json  tsconfig.json
apps/vite-project-2/src/: App.tsx
apps/vite-project-3/: BUILD.bazel  package-lock.json  package.json
apps/vite-project-3/src/: App.tsx
